[package]
name = "port-expander"
description = "Abstraction for I2C port-expanders"
authors = ["Rahix <rahix@rahix.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rahix/port-expander"
readme = "README.md"
keywords = ["i2c", "shared-bus", "pca", "pcf", "gpio"]
categories = ["embedded", "no-std", "hardware-support"]

version = "0.3.0"

edition = "2018"

[dependencies]
embedded-hal = { version = "0.2.4", features = ["unproven"] }
shared-bus = "0.2.2"

[dev-dependencies]
embedded-hal-mock = "0.7.2"
