[package]
name = "port-expander"
description = "Abstraction for I2C port-expanders"
authors = ["Rahix <rahix@rahix.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rahix/port-expander"
readme = "README.md"
keywords = ["i2c", "gpio-expander", "gpio", "pca", "pcf"]
categories = ["embedded", "no-std", "hardware-support"]

version = "0.5.0"

edition = "2021"

[features]
std = []

[dependencies]
critical-section = { version = "1.1.2", optional = true }
embedded-hal = { version = "1.0.0" }

[dev-dependencies]
embedded-hal-mock = "0.10.0"
