[package]
name = "port-expander"
description = "Abstraction for I2C port-expanders"
authors = ["Rahix <rahix@rahix.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rahix/port-expander"
readme = "README.md"
keywords = ["i2c", "gpio-expander", "gpio", "pca", "pcf"]
categories = ["embedded", "no-std", "hardware-support"]

version = "0.6.5"

edition = "2021"

[features]
default = ["async"]
std = []
async = ["embedded-hal-async", "heapless"]

[dependencies]
critical-section = { version = "1.1.2", optional = true }
embedded-hal = { version = "1.0.0" }
embedded-hal-async = { version = "1.0.0", optional = true }
heapless = {version = "0.8.0", optional = true }

[dev-dependencies]
embedded-hal-mock = "0.11.1"
